--- a/src/App.css
+++ b/src/App.css
@@ -31,8 +31,9 @@ h2 {
   flex-direction: column;
   align-items: center;
   height: fit-content;
-  /* height: 100%; */
+  width: 100%;
   overflow: hidden;
+  position: relative;
 }
 
 .navContainer {
@@ -55,10 +56,6 @@ h2 {
   min-height: 100%;
   position: absolute;
   display: none;
-  /* left: 0;
-  right: 0;
-  top: 80px;
-  bottom: 0; */
 }
 
 .miniCartBg.active {
@@ -79,7 +76,6 @@ h2 {
   display: flex;
   flex-wrap: wrap;
   width: 90%;
-  /* height: fit-content; */
   margin-bottom: 3rem;
 }
 
@@ -391,8 +387,6 @@ h2 {
 
 .Container .ProductPage .productInfo .sizes {
   display: flex;
-  width: 16rem;
-  justify-content: space-between;
   align-items: center;
   margin-bottom: 20px;
 }
@@ -401,6 +395,7 @@ h2 {
   border: #1d1f22 1px solid;
   width: 60px;
   height: 45px;
+  margin-right: 5px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -411,18 +406,8 @@ h2 {
 .Container .ProductPage .productInfo .colorBox {
   height: 36px;
   width: 36px;
-}
-
-.Container .ProductPage .productInfo .colorBox:nth-child(1) {
-  background-color: #d3d2d5;
-}
-
-.Container .ProductPage .productInfo .colorBox:nth-child(2) {
-  background-color: #2b2b2b;
-}
-
-.Container .ProductPage .productInfo .colorBox:nth-child(3) {
-  background-color: #0f644f;
+  border: 1px solid #2b2b2b;
+  margin-right: 5px;
 }
 
 .Container .ProductPage .productInfo .colorBox:hover {
@@ -433,8 +418,6 @@ h2 {
 
 .Container .ProductPage .productInfo .colors {
   display: flex;
-  width: 7.5rem;
-  justify-content: space-between;
   align-items: center;
   margin-bottom: 20px;
 }
@@ -667,6 +650,7 @@ span {
 
 .CartProducts .cartProduct.cardProductMinicart {
   height: 250px;
+  /* min-height: fit-content; */
   border: none;
 }
 
@@ -676,10 +660,21 @@ span {
 
 .CartProducts .cartProduct .left {
   height: 290px;
+  overflow-y: scroll;
 }
 
 .CartProducts .cartProduct.cardProductMinicart .left {
   height: 200px;
+  overflow-y: scroll;
+
+}
+
+.CartProducts
+  .prodPagePrice {
+  margin-bottom: 10px;
+  font-weight: 600;
+  font-size: 18px;
+  font-family: "Roboto Condensed";
 }
 
 .CartProducts
@@ -696,16 +691,12 @@ span {
 
 .CartProducts .cartProduct .left .sizes {
   display: flex;
-  width: 16rem;
-  justify-content: space-between;
   align-items: center;
   margin-bottom: 15px;
 }
 
 .CartProducts .cartProduct.cardProductMinicart .left .sizes {
   display: flex;
-  width: 7rem;
-  justify-content: space-between;
   align-items: center;
   margin-bottom: 15px;
 }
@@ -714,6 +705,7 @@ span {
   border: #1d1f22 1px solid;
   width: 60px;
   height: 45px;
+  margin-right: 5px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -724,7 +716,10 @@ span {
 .CartProducts .cartProduct.cardProductMinicart .left .sizes .sizeBox {
   border: #1d1f22 1px solid;
   width: 24px;
+  min-width: fit-content;
   height: 24px;
+  padding: 5px;
+  margin-right: 5px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -741,26 +736,28 @@ span {
 
 .CartProducts .cartProduct .left .colors {
   display: flex;
-  width: 7.5rem;
   justify-content: space-between;
   align-items: center;
+  margin-bottom: 15px;
 }
 
 .CartProducts .cartProduct.cardProductMinicart .left .colors {
   display: flex;
-  width: 5rem;
-  justify-content: space-between;
   align-items: center;
+  margin-bottom: 10px;
 }
 
 .CartProducts .cartProduct .left .colors .colorBox {
   height: 36px;
   width: 36px;
+  margin-right: 5px;
+  border: #1d1f22 1px solid;
 }
 
 .CartProducts .cartProduct.cardProductMinicart .left .colors .colorBox {
   height: 20px;
   width: 20px;
+  margin-right: 5px;
 }
 
 .CartProducts .cartProduct .left .colors .colorBox:hover {
@@ -927,4 +924,92 @@ span {
   cursor: pointer;
   background-color: #4aa161;
   transition: all 0.3s;
+}
+
+
+.filterContainer{
+  padding-top: 180px;
+  z-index: 1;
+  height: 100vh;
+  width: 200px;
+  background-color: white;
+}
+
+.filterContainer .filterName{
+  flex-wrap: wrap;
+  background-color: white;
+}
+
+.filterContainer .filterName h3{
+  padding: 10px 20px;
+}
+
+.filterContainer .filterName .valueBox{
+  background-color: white;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.filterContainer .filterName:first-child{
+  border-top: none;
+}
+
+.filterContainer .filterName:hover{
+  background-color: #ddfbe6;
+  transition: all 0.3s;
+  cursor: pointer;
+  
+}
+
+.filterContainer .filterName .valueBox .filterValue{
+  margin: 10px 10px 10px 20px;
+  border: #1d1f22 1px solid;
+  width: 60px;
+  height: 45px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 16px;
+}
+
+.filterContainer .filterName .valueBox .filterValueColor{
+  margin: 10px 10px 10px 20px;
+  border: #1d1f22 1px solid;
+  width: 60px;
+  height: 45px;
+}
+
+.filterContainer .filterName .valueBox .filterValueColor:hover{
+  border: 3px solid #4aa161;
+  filter: brightness(85%);
+  transition: 0.3s all;
+}
+
+.filterContainer .filterName .filterValue:hover{
+  background-color: #1d1f22;
+  color: white;
+  transition: 0.3s all;
+  cursor: pointer;
+}
+
+.Container .filterToggle{
+  background-color: darkred;
+  color: white;
+  width: 50px;
+  height: 50px;
+  position: absolute;
+  left: 0;
+  top: 180px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 20px;
+  border-top-right-radius: 20px;
+  border-bottom-right-radius: 20px;
+
+}
+
+.Container .filterToggle:hover{
+  cursor: pointer;
 }
